add_tests